# FractalHorizon

./: .gitignore  CMakeLists.txt  CNAME  FractalHorizon  README.md  index.html
src/: Clock.cpp  Clock.h  Engine.cpp  Engine.h  FracralAPI.cpp  FractalAPI.h  Structs&Classes.h  System.h  SystemExample.h  eventManager.h  glad.c  main.cpp
src/ECS/component/: component.cpp  component.h
src/ECS/entity/: entity.cpp  entity.h
src/ECS/system/: system.cpp  system.h
src/FractalAPI/: FracralAPI.cpp  FractalAPI.h  HorizonAPI.cpp  HorizonAPI.h
src/moduleManager/: moduleManager.h
src/render/: Camera.cpp  Camera.h  ChunkRender.cpp  ChunkRender.h  InputSystem.cpp  InputSystem.h  RenderCore.cpp  RenderCore.h  Shader.cpp  Shader.h  UniformState.cpp  UniformState.h  WindowGLFW.cpp  WindowGLFW.h  WindowGlFW.cpp
src/render/shaders/: circle.fragment  circle.vertex
src/start/: test.cpp  test.h
src/taskSystem/: taskSystem.cpp  taskSystem.h
src/world/chunk/: chunk.cpp  chunk.h
src/world/voxel/: voxel.h
